--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -5,14 +5,18 @@
 name: Spring Boot & Gradle CI/CD
 
 # Event Trigger
-# master branch에 push 또는 pull request가 발생할 경우 동작
+# master branch에 대한 pull request가 close 될 때 동작
 # branch 단위 외에도, tag나 cron 식 등을 사용할 수 있음
 on:
-  push:
+  pull_request:
     branches: [ main ]
+    types:
+      - closed
 
 jobs:
   build:
+    # pull request가 merge된 경우
+    if: github.event.pull_request.merged == true
     # 실행 환경 지정
     runs-on: ubuntu-24.04
 
