--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -8,7 +8,7 @@ name: Spring Boot & Gradle CI/CD
 # master branch에 대한 pull request가 close 될 때 동작
 # branch 단위 외에도, tag나 cron 식 등을 사용할 수 있음
 on:
-  pull_request:
+  pull_request_target:
     branches: [ main ]
     types:
       - closed
